# pos-system-mongodb

./: .env  .gitignore  Cargo.toml  docker-compose.yaml  mongo-init.js  realm-export.json
data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--6794262231723491509.wt  collection-0--7835951014329633190.wt  collection-2--6794262231723491509.wt  collection-3--7835951014329633190.wt  collection-4--6794262231723491509.wt  collection-5--7835951014329633190.wt  collection-7--6794262231723491509.wt  index-1--6794262231723491509.wt  index-1--7835951014329633190.wt  index-2--7835951014329633190.wt  index-3--6794262231723491509.wt  index-4--7835951014329633190.wt  index-5--6794262231723491509.wt  index-6--6794262231723491509.wt  index-6--7835951014329633190.wt  index-8--6794262231723491509.wt  index-9--6794262231723491509.wt  sizeStorer.wt
data/.mongodb/mongosh/: 65b6771b90a4b72412aa7ecf_log  65b6771bb5d2e7b9a342406a_log  65b6771c2d66587162415ac6_log  config
data/diagnostic.data/: metrics.2024-01-28T15-47-38Z-00000  metrics.2024-01-28T15-47-43Z-00000  metrics.2024-01-29T16-14-00Z-00000  metrics.interim
src/: main.rs  tests.rs
src/models/: categories.rs  mod.rs  orders.rs  products.rs  tables.rs  waiters.rs
src/repo/: error.rs  mod.rs  orders.rs  products.rs  repository.rs
src/services/: auth.rs  categories.rs  error.rs  mod.rs  orders.rs  products.rs  tables.rs  waiters.rs
