[package]
name = "pos-server-mongodb"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8"
actix-cors = "0.6"
mongodb = "2"
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
chrono = "0.4"
log = "0.4"
futures = "0.3"
env_logger = "0.11"
jsonwebtoken = "9"
reqwest = { version = "0.11", features = ["json"] }